<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_your_expenses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_expenses_this_month"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal_3"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_1"
        app:layout_constraintTop_toTopOf="@+id/guideline_horizontal_1"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_costs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal_2"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_1"
        app:layout_constraintTop_toBottomOf="@+id/tv_your_expenses" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.23" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.32831737" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal_4"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_2"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_1"
        app:layout_constraintTop_toTopOf="@+id/guideline_horizontal_3" />

    <Button
        android:id="@+id/btn_refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/refresh"
        app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal_4"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_2"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_1"
        app:layout_constraintTop_toTopOf="@+id/guideline_horizontal_3" />

    <Button
        android:id="@+id/btn_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal_4"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_2"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_1"
        app:layout_constraintTop_toTopOf="@+id/guideline_horizontal_3" />

    <TableLayout
        android:id="@+id/tb_items"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:stretchColumns="*"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal_6"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_2"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_1"
        app:layout_constraintTop_toTopOf="@+id/guideline_horizontal_5">

        <TableRow
            android:id="@+id/tb_header"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tb_item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tb_item_expense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expense"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tb_item_quota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quota"
                android:textSize="18sp" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>